# PartialAAMs

./: .gitignore  README.md  benchmarking.py  data.csv  gm_expand.py  hext.py  hydro_analysis.ipynb  hydro_extend.py  install_partialaams.sh  lint.sh  pyproject.toml  requirements.txt  run.sh
.github/workflows/: publish-package.yml  test-and-lint.yml
Data/: aamutils_log.txt  all_aamutils_log.txt  data.ipynb  entry_times_20250505_173824.csv  entry_times_20250505_174343.csv  entry_times_20250505_174855.csv  entry_times_20250505_175408.csv  entry_times_20250505_175920.csv  gm_log.txt  log.txt  log_test.txt  old_entry_times.csv
Data/Benchmark/: entry_times_20250425_164240.csv  entry_times_20250426_052934.csv  entry_times_20250426_180859.csv  entry_times_20250427_064637.csv  entry_times_20250427_192134.csv  log.txt
benchmarking/: benchmark_aamutils.py  benchmark_gm.py  data_prepare.py
partialaams/: __main__.py  aam_expand.py  aam_utils.py  extender.py  gen_data.py  gm_expand.py  hext.py  hydro.py  ilp_expand.py  utils.py
test/: test_aam_epand.py  test_extender.py  test_gm_expand.py  test_ilp_expand.py
